# dotfiles

./: .bash_profile  .gitconfig  .gitignore  .gitmodules  .pam_environment  .profile  .vimrc  .zshrc  Gemfile  Makefile  README.md  README.rst  Rakefile  Xmodmap  apply-dconf  bash_profile  gitconfig  gitignore  gtkrc-2.0  gvimrc  install.fish  interactive-config  irbrc  msmtprc  notmuch-config  offlineimap.py  offlineimaprc  pam_environment  pentadactylrc  pplconfig  profile  rtorrent.rc  smile  ssh_config  tmux.conf  uninstall.fish  update.fish  urlview  vconsole_dark  vconsole_light  (+2 more)
.ssh/: config
ack/: ackrc
bash/: profile
bundle/: config
chunkwm/: .chunkwmrc  .skhdrc
config/: fehbg.conf  i3lockbg.conf  mimeapps.list  user-dirs.dirs
ctags/: .ctags
editorconfig/: .editorconfig
email/: .msmtprc  .notmuch-config  .offlineimaprc
env/: .dircolors  .direnvrc  .env  .pam_environment
fish/: smile
git/: .gitconfig  .gitignore.global  config  gitconfig  gitignore
gnupg/: .parcimonie.conf  dirmngr.conf  gpg-agent.conf  gpg.conf
goldendict/: article-style.css  config
gtags/: .globalrc
gtk/: .gtkrc-2.0
haskell/: .hindent.yaml
hyper/: .hyper.js
irssi/: .gitignore  config  default.theme  startup  terlar.theme
iterm/: com.googlecode.iterm2.plist  tomorrow.itermcolors
lftp/: .lftprc
most/: .mostrc
mplayer/: config
xmonad/.xmonad/: stack.yaml  xmonad-custom.cabal  xmonad.hs
xmonad/.xmonad/lib/: Config.hs  Hooks.hs  Keys.hs  Topics.hs  Utils.hs
xmonad/.xmonad/lib/XMonad/Util/: NamedScratchpadBringer.hs  PIPWindow.hs  ToggleFloat.hs
(+628 files in other folders)
