name:                xmonad-custom
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         XMonad customizations
homepage:            https://github.com/terlar/dotfiles
license:             BSD3
author:              Terje Larsen
maintainer:          terlar@gmail.com
copyright:           Copyright: (c) 2016 Terje Larsen
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonad-custom-exe
  hs-source-dirs:      ., lib
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , X11
  default-language:    Haskell2010
